--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     }
 
     emailjs.init("U08QGWWRUenJDOllc");
-
+let formEnvoye = false; // ✅ Ajout à faire ici
   function sendEmail(event) {
   event.preventDefault();
 
