--- a/index.html
+++ b/index.html
@@ -236,5 +236,27 @@
       map.setView(latlng, 13);
     });
   </script>
+  <div style="display: none;">
+  VTC Perpignan, chauffeur privé Perpignan, réservation VTC 66, taxi Perpignan, taxi 66, transport aéroport Perpignan, transport gare Perpignan,
+  Uber Perpignan, Bolt Perpignan, Heetch Perpignan, Allocab Perpignan, G7 Perpignan, alternative Uber, alternative taxi Perpignan,
+  chauffeur professionnel, transport sécurisé Perpignan, service de VTC 24h/24 7j/7, navette gare Perpignan, navette aéroport Perpignan,
+  VTC entreprise Perpignan, transport médicalisé, VTC longue distance, VTC local, réservation en ligne VTC, tarif VTC Perpignan,
+  service de transport privé à Perpignan, OuassVTC, chauffeur ponctuel, service premium VTC, meilleure solution de transport Perpignan,
+  transport rapide et fiable, réservation de taxi privé, plateforme de réservation VTC, transport sur mesure Perpignan, chauffeur indépendant VTC,
+  course Perpignan, prix VTC Perpignan, alternative G7, VTC pas cher Perpignan, course VTC urgente, VTC professionnel, VTC disponible Perpignan,
+  chauffeur VTC autorisé, service client VTC Perpignan, réservation immédiate, application VTC, prestataire VTC local, entreprise VTC Perpignan,
+  vtc aéroport perpignan, transport personnes perpignan, chauffeur Uber privé, VTC premium Perpignan, véhicule avec chauffeur Perpignan,
+
+  Perpignan, Saint-Estève, Canet-en-Roussillon, Cabestany, Rivesaltes, Argelès-sur-Mer, Le Barcarès, Leucate, Port-Leucate, Torreilles,
+  Sainte-Marie-la-Mer, Bompas, Pia, Saint-Cyprien, Cerbère, Banyuls-sur-Mer, Port-Vendres, Collioure, Céret, Thuir, Elne, Bages, Villeneuve-de-la-Raho,
+  Espagne, frontière Espagne, Gérone, Figueras, Costa Brava, Barcelone, aéroport Gérone, Lloret de Mar, Rosas, Empuriabrava,
+
+  hôtel à Perpignan, airbnb Perpignan, location saisonnière Perpignan, camping Le Barcarès, vacances Canet-en-Roussillon,
+  transport vacances été, VTC plage, transfert hôtel gare, VTC événement, transport de groupe, mariage VTC, navette concert,
+  chauffeur VTC discothèque, transfert VTC aéroport, déplacement professionnel, transport VIP, service de nuit VTC, transport médical VTC,
+  transfert hôpital, VTC rapide, VTC fiable, service ponctuel, transport scolaire privé, VTC tourisme, visite guidée VTC, 
+  transport longue distance, transport local, chauffeur privé disponible maintenant, solution de mobilité douce, alternative aux taxis.
+
+  </div>
 </body>
 </html>
